[project]
name = "fx-crash-sig"
description = "DEPRECATED: Get crash signature from Firefox crash ping"
version = "1.0.3"
readme = "README.md"
license = {text = "MPLv2"}
requires-python = ">=3.8"
dependencies = [
    "requests",
    "siggen",
    "importlib_metadata",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 2 - Pre-Alpha",
]
urls.Homepage = "https://github.com/mozilla-services/fx-crash-sig/"
urls.Source = "https://github.com/mozilla-services/fx-crash-sig/"
urls.Issues = "https://github.com/mozilla-services/fx-crash-sig/issues"

[project.scripts]
fx-crash-sig = "fx_crash_sig.cmd_get_crash_sig:cmdline"

[project.optional-dependencies]
dev = [
    "build",
    "check-manifest",
    "pytest",
    "ruff",
    "tox",
    "tox-gh-actions",
    "twine",
    "wheel",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.ruff]
target-version = "py38"
src = ["src"]
line-length = 88

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), and bugbear (B) rules
select = ["E", "F", "B"]

ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"


[tool.pytest.ini_options]
filterwarnings = ["error"]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py38
    py38-lint
    py39
    py310
    py311
    py312

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
extras = dev
commands = pytest {posargs} tests/

[testenv:py38-lint]
basepython = python3.8
changedir = {toxinidir}
commands =
    ruff format --check fx_crash_sig tests
    ruff check fx_crash_sig tests
"""
